# sdl-ecs-example

./: .gitignore  README.md
src/: CMakeLists.txt  game.hpp  main.cpp
